# HuffArchiver

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.md  README.md  main.cpp  readme.md
.cache/clangd/index/: archiver.cpp.43DDF21E96C56981.idx  archiver.h.436E48515A58AC9F.idx  archiver_tests.cpp.F8B7D3BB343E7CB8.idx  binary_trie.h.34ED06B6F6F8DE9A.idx  file_reader.cpp.4A1CC540D143BD76.idx  file_reader.h.9C98A214177D9054.idx  file_writer.cpp.6AE4D8C9DDB884D8.idx  file_writer.h.2A7A889C55B71993.idx  main.cpp.4464FAAABD9B3B81.idx  priority_queue.h.AB1CF722AF418207.idx  reader_interface.h.983559526775A946.idx  writer_interface.h.053DCEA024F7891F.idx
archiver/: CMakeLists.txt  archiver.cpp  archiver.h
archiver/tests/: archiver_tests.cpp
archiver/tests/mock/:   Очень при очень плохое  имя файла  ありがとう 😂.arc  T.arc  kek  Очень при очень плохое  имя файла
benchmarks/: CMakeLists.txt  benchmarks.cpp  run_benchmarks.sh
binary_trie/: CMakeLists.txt  binary_trie.h
binary_trie/tests/: binary_trie_tests.cpp
priority_queue/: CMakeLists.txt  priority_queue.h
priority_queue/tests/: priority_queue_tests.cpp
reader/: CMakeLists.txt  file_reader.cpp  file_reader.h  reader.cpp  reader.h  reader_interface.h
reader/tests/: reader_tests.cpp
tasks/archiver/: CMakeLists.txt  readme.md
utility/logger/: logger.cpp  logger.h
utility/timer/: timer.cpp  timer.h
writer/: CMakeLists.txt  file_writer.cpp  file_writer.h  writer.cpp  writer.h  writer_interface.h
writer/tests/: writer_tests.cpp
